--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html> 
 <head> 
-  <title>Testing html</title>
+  <title>Elitekits Demo</title>
 </head>
 <body> 
-  <h1>Hello World</h1>
+  <h1>Elitekits Description</h1>
   </body>
   </html>
