--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html> 
 <head> 
-  <title>Testing html</title>
+  <title>Seperates Information</title>
 </head>
 <body> 
-  <h1>Hello World</h1>
-  </body>
-  </html>
+  <h1>Hello World, it is seperates!</h1>
+  <p>
+    A bit about me, I do youtube for fun and I play on a minecraft server called EliteKits.net. I am a moderator on the server and love the community.
+  </p>
+  <p>
+    I have been in the community for almost three years now and am looking in to coding for Java, CSS, 
+  </p>
+  <a href="https://www.youtube.com/channel/UCYzKTVxC1cX13CALZzU-WzQ">My youtube channel!
+    <hr />
+    <div>
+      Copyright &copy: 2017 Seperates
+  </div>
+</body>
+</html>
